feat: backend latest changes (images, user data, server, activities, challenges)
