# backend/app/router/routes/users/userRoute.js
@@ -13,8 +13,8 @@ router.get("/", errorCatcher(userController.findAll));
 router.get("/:userId", errorCatcher(userController.findOne));
 router.post("/", bodySanitizer, upload.single('image'), errorCatcher(userController.createOne));
 router.patch("/:userId", isAuthenticated, upload.single('image'), bodySanitizer, errorCatcher(userController.updateOne));
-router.delete("/:userId", isAdmin, bodySanitizer, errorCatcher(userController.deleteOne));
-router.post("/session/login", errorCatcher(userController.login));
+router.delete("/:userId", isAdmin, errorCatcher(userController.deleteOne));
+router.post("/session/login", upload.single('image'), errorCatcher(userController.login));
 router.get("/session/logout", isAuthenticated, errorCatcher(userController.logout));
 
 module.exports = router;
